--- a/src/theme.css
+++ b/src/theme.css
@@ -45,6 +45,10 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+label {
+  display: inline;
+}
+
 /* Headings */
 h1,
 h2,
